feat(admin): implement modal for viewing comment images
Replace the previous toggle functionality with a dedicated modal dialog
to display comment images in a centered overlay with a close button. This
improves user experience by providing a cleaner, more focused view for
image previews in the admin interface.

--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -83,6 +83,13 @@
     </main>
   </div>
 
+  <div id="imageModal" class="image-modal" style="display: none;">
+    <div class="image-modal-content">
+      <span id="closeModal" class="close-btn">&times;</span>
+      <img id="modalImage" class="modal-image" src="" alt="Imagem Comentário">
+    </div>
+  </div>
+
   <script src="auth.js"></script>
   <script src="api_auth.js"></script>
   <script src="api_admin.js"></script>
