feat(interactive-map): add image upload to comments
Add support for uploading JPEG images when submitting comments on the interactive map. Includes UI input field and API integration to send images with comment data.

--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -19,7 +19,6 @@
 
 <header class="navbar">
   <a href="../../index.html" class="btn voltar">← voltar</a>
-  <button class="btn todos-pins" onclick="logAllPins()">Todos Pins</button>
 </header>
 
 <div id="map"></div>
@@ -144,6 +143,7 @@
 
         <label for="comment-text">Comentário:</label>
         <textarea id="comment-text" placeholder="Digite seu comentário" required></textarea>
+        <input type="file" id="imgInput" accept="image/jpeg" />
         <button type="submit" class="submit-btn">Enviar</button>
       </form>
     </div>
