--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -1,121 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<!-- Página de Administração - Acesso Livre -->
-<!-- Esta página fornece interface de login e dashboard para administradores -->
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Admin - Acesso Livre</title>
-  <!-- Otimização de carregamento de fontes -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Comme:wght@100..900&display=swap" rel="stylesheet">
-  <!-- Estilos globais e específicos -->
-  <link rel="stylesheet" href="../../styles/global.css">
-  <link rel="stylesheet" href="admin.css">
-  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100..900&family=Comme:wght@100..900&display=swap"
+    rel="stylesheet" />
+
+  <link rel="stylesheet" href="../../styles/global.css" />
+  <link rel="stylesheet" href="./admin.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
 <body>
-  <!-- Seção de Login -->
-  <div id="login-section" class="login-container">
-    <div class="login-card">
-      <div class="login-header">
-        <h1>Acesso Administrativo</h1>
-        <p>Digite suas credenciais para continuar</p>
+
+  <header class="admin-header">
+    <div class="header-left">
+      <img src="../../assets/img/global/logo-acesso-livre.png" class="header-logo" />
+      <span class="header-name">Acesso Livre</span>
+    </div>
+
+    <div class="header-center">
+      <h1 class="header-title">Avaliações Pendentes</h1>
+    </div>
+
+    <div class="header-right">
+      <button id="logout-btn" class="logout-btn">Sair</button>
+    </div>
+  </header>
+
+  <!-- DASHBOARD ÚNICO (corrigido) -->
+  <main id="admin-dashboard" class="admin-container">
+    <div class="reviews-container">
+      <h2>Avaliações Pendentes</h2>
+
+      <div id="reviews-list" class="reviews-list"></div>
+    </div>
+  </main>
+
+  <!-- MODAL DE IMAGENS -->
+  <div id="imageModal" class="image-modal" style="display:none;">
+    <div class="image-modal-content">
+      <span id="closeModal" class="close-btn">&times;</span>
+
+      <div class="swiper-container swiper">
+        <div class="swiper-wrapper"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
       </div>
-      <form id="login-form" class="login-form">
-        <div class="input-group">
-          <label for="admin-email">Email</label>
-          <input type="email" id="admin-email" placeholder="Digite seu email" required>
-        </div>
-        <div class="input-group">
-          <label for="admin-password">Senha</label>
-          <input type="password" id="admin-password" placeholder="Digite a senha" required>
-        </div>
-        <button type="submit" class="login-btn">Entrar</button>
-      </form>
-      <div id="login-error" class="error-message" style="display: none;">Usuário ou senha incorreta. Tente novamente.</div>
-      <button id="forgot-password-link" class="register-link" type="button">Esqueceu a senha?</button>
     </div>
   </div>
 
-  <!-- Painel Administrativo (oculto inicialmente) -->
-  <div id="admin-dashboard" style="display: none;">
-    <header class="admin-header">
-      <div class="header-left">
-        <img src="../../assets/img/global/logo-acesso-livre.png" alt="Logo Acesso Livre" class="header-logo">
-        <span class="header-name">Acesso Livre</span>
-      </div>
-      <div class="header-center">
-        <h1 class="header-title">Lista de avaliações pendentes</h1>
-      </div>
-      <div class="header-right">
-        <button id="logout-btn" class="logout-btn">Sair</button>
-      </div>
-    </header>
-
-    <main class="admin-container">
-      <div class="reviews-container">
-        <h2>Avaliações Pendentes</h2>
-        <div id="reviews-list" class="reviews-list">
-          <!-- Avaliações serão carregadas aqui -->
-           <button class="photos-btn">Fotos</button>
-        </div>
-      </div>
-    </main>
-  </div>
-
-  <!-- Modal de Imagem -->
-<div id="imageModal" class="image-modal" style="display: none;">
-  <div class="image-modal-content">
-    <span id="closeModal" class="close-btn">&times;</span>
-
-    <!-- Swiper Container -->
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <!-- Os slides de imagens serão inseridos dinamicamente aqui -->
-      </div>
-
-      <!-- Botões de navegação -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-
-      <!-- Paginação -->
-      <div class="swiper-pagination"></div>
-    </div>
-  </div>
-</div>
-
-<!-- Modal de Recuperação de Senha -->
-<div id="forgotPasswordModal" class="forgot-modal">
-  <div class="forgot-modal-content">
-    <span id="close-forgot-modal" class="close-btn">&times;</span>
-
-    <h2>Recuperar Senha</h2>
-
-    <form id="forgot-password-form">
-      <div class="input-group">
-        <label for="forgot-email">Email</label>
-        <input type="email" id="forgot-email" placeholder="Digite seu email cadastrado" required>
-      </div>
-
-      <button type="submit" class="login-btn">Enviar</button>
-    </form>
-
-    <div id="forgot-error" class="error-message" style="display:none;"></div>
-    <div id="forgot-success" class="success-message" style="display:none;">Instruções enviadas para o email!</div>
-  </div>
-</div>
-
-  <script src="auth.js"></script>
-  <script src="api_auth.js"></script>
-  <script src="api_admin.js"></script>
-  <script src="admin.js"></script>
-  <script src="forgot-password.js"></script>
+  <script src="./api_admin.js"></script>
+  <script src="./admin.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
 </body>
 
 </html>
