--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -19,43 +19,43 @@
 
 <body>
 
-  <header class="admin-header">
+  <header>
     <div class="header-left">
-      <img src="../../assets/img/global/logo-acesso-livre.png" class="header-logo" />
-      <span class="header-name">Acesso Livre</span>
+      <img src="../../assets/img/global/logo-acesso-livre.png">
+      <span>Acesso Livre</span>
     </div>
 
-    <div class="header-center">
-      <h1 class="header-title">Avaliações Pendentes</h1>
-    </div>
+    <div class="header-title">Lista de avaliações pendentes</div>
 
-    <div class="header-right">
-      <button id="logout-btn" class="logout-btn">Sair</button>
-    </div>
+    <button id="logout-btn" class="logout-btn">Sair</button>
   </header>
 
-  <!-- DASHBOARD ÚNICO (corrigido) -->
-  <main id="admin-dashboard" class="admin-container">
-    <div class="reviews-container">
-      <h2>Avaliações Pendentes</h2>
-
-      <div id="reviews-list" class="reviews-list"></div>
+  <main>
+    <div id="reviews-list">
+      <!-- Comentários serão adicionados pelo JS -->
     </div>
-  </main>
 
-  <!-- MODAL DE IMAGENS -->
-  <div id="imageModal" class="image-modal" style="display:none;">
-    <div class="image-modal-content">
-      <span id="closeModal" class="close-btn">&times;</span>
+    <div id="photoModal" class="modal">
+      <div class="modal-content">
+        <span id="closeModal" class="close">&times;</span>
+        <h2>Fotos do Comentário</h2>
 
-      <div class="swiper-container swiper">
-        <div class="swiper-wrapper"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
+        <!-- CONTAINER DO SWIPER -->
+        <div class="swiper-container swiper">
+          <div id="swiperWrapper" class="swiper-wrapper">
+            <!-- As imagens serão inseridas aqui -->
+          </div>
+
+          <!-- Controles -->
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
     </div>
-  </div>
+    </div>
+
+  </main>
 
   <script src="./api_admin.js"></script>
   <script src="./admin.js"></script>
