feat(interactive-map): add legend modal to interactive map
Add a fixed button to open a legend modal displaying accessibility items with icons and names, fetched from the API. Includes modal styling and JavaScript for opening, closing, and loading content.

--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -17,11 +17,14 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 </head>
 
+<body>
 <header class="navbar">
   <a href="../../index.html" class="btn voltar">← voltar</a>
 </header>
 
 <div id="map"></div>
+
+<button id="btnLegenda" class="btn legenda">Legenda</button>
 
 <div id="infoModal" class="modal">
   <div class="modal-content">
@@ -154,6 +157,15 @@
   </div>
 </div>
 
+<div id="legendaModal">
+  <div class="modal-content">
+    <span class="close-legenda">&times;</span>
+    <h2>Legenda</h2>
+
+    <ul id="legenda-list" class="legenda-list"></ul>
+  </div>
+</div>
+
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script src="api_map.js"></script>
 <script src="map.js"></script>
@@ -182,6 +194,43 @@
     return result;
   };
 </script>
+
+<script>
+  const btnLegenda = document.getElementById("btnLegenda");
+  const legendaModal = document.getElementById("legendaModal");
+  const closeLegenda = document.querySelector(".close-legenda");
+  const legendaList = document.getElementById("legenda-list");
+
+  // abrir / fechar
+  btnLegenda.onclick = () => legendaModal.style.display = "block";
+  closeLegenda.onclick = () => legendaModal.style.display = "none";
+
+  window.onclick = (event) => {
+    if (event.target === legendaModal) legendaModal.style.display = "none";
+  };
+
+  // carregar legenda automaticamente
+  async function loadLegenda() {
+    const items = await api.getAccessibilityItems();
+
+    legendaList.innerHTML = ""; // limpar antes
+
+    items.forEach(item => {
+      const li = document.createElement("li");
+
+      li.innerHTML = `
+        <img src="${item.icon_url}" alt="${item.name}">
+        <span>${item.name}</span>
+      `;
+
+      legendaList.appendChild(li);
+    });
+  }
+
+  // chama ao carregar página
+  loadLegenda();
+</script>
+
 </body>
 
 </html>
