feat(interactive-map): add custom button with modal for map interactions
Add a round button in the bottom-right corner of the map that, when clicked, displays a modal overlay. The modal can be closed by clicking anywhere on the map, restoring the button. Includes styling for the button and modal elements.

--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -24,6 +24,11 @@
 
 <div id="map"></div>
 
+<div id="btnModal">
+  <button class="close-modal">&times;</button>
+  
+</div>
+
 <button id="btnLegenda" class="btn legenda">Legenda</button>
 
 <div id="infoModal" class="modal">
