feat(interactive-map): add small legend modal for map pins
Add a small modal positioned at the bottom right of the map to display a legend for pin types. The modal includes a header and a list that will be populated by JavaScript. Corresponding CSS styles ensure the modal is visually integrated and responsive.

--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -24,9 +24,13 @@
 
 <div id="map"></div>
 
-<div id="btnModal">
-  <button class="close-modal">&times;</button>
-  
+<div id="btnModal" class="modal-small">
+  <div class="modal-content-small">
+    <h4>Legenda dos Pins</h4>
+    <ul id="pinsLegendList">
+      <!-- JS vai preencher -->
+    </ul>
+  </div>
 </div>
 
 <button id="btnLegenda" class="btn legenda">Legenda</button>
