--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -18,125 +18,134 @@
 </head>
 
 <body>
-<header class="navbar">
-  <a href="../../index.html" class="btn voltar">← voltar</a>
-</header>
+  <header class="navbar">
+    <a href="../../index.html" class="btn voltar">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+        stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M19 12H5M12 19l-7-7 7-7" />
+      </svg>
+      <span>Voltar</span>
+    </a>
+  </header>
 
-<div id="map"></div>
-
-<div id="btnModal" class="modal-small">
-  <div class="modal-content-small">
-    <h4>Legenda dos Pins</h4>
-    <ul id="pinsLegendList">
-      <!-- JS vai preencher -->
-    </ul>
+  <div id="map"></div>
+  <div id="map-loader">
+    <span class="loader"></span>
+    <p>Carregando mapa...</p>
   </div>
-</div>
 
-<button id="btnLegenda" class="btn legenda">Legenda</button>
-
-<div id="infoModal" class="modal">
-  <div class="modal-content">
-    <div id="modal-body">
-      <!-- Carrossel de Imagens -->
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="project-img">
-              <img src="/src/assets/img/map/section-map/foto-local.jpeg" alt="Foto 01">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="project-img">
-              <img src="/src/assets/img/map/section-map/foto-local-2.jpeg" alt="Foto 02">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="project-img">
-              <img src="/src/assets/img/map/section-map/foto-local-3.jpeg" alt="Foto 03">
-            </div>
-          </div>
-        </div>
-
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-
-
-      <!-- Informações -->
-      <section class="info-section">
-        <h1 id="location-title"></h1>
-        <div class="rating">
-          <span>Nota: </span>
-          <div class="stars">⭐⭐⭐⭐⭐</div>
-        </div>
-
-        <!-- Abas: Informações, Avaliações, Descrição -->
-        <div class="tabs">
-          <button class="tab-btn active" id="info-tab">Informações</button>
-          <button class="tab-btn" id="review-tab">Comentarios</button>
-          <button class="tab-btn" id="description-tab">Descrição</button>
-        </div>
-
-        <!-- Conteúdo das Abas -->
-        <div class="tab-content">
-          <div class="tab-pane active" id="info-content">
-            <h3>Informações de Acessibilidade</h3>
-            <ul>
-              <li></li>
-              <li></li>
-            </ul>
-          </div>
-
-          <div class="tab-pane" id="review-content">
-            <h3>Comentarios</h3>
-            <div class="comments-list">
-              <div class="comment-card">
-                <div class="comment-header">
-                  <span class="user-name">João Silva</span>
-                  <span class="comment-date">2023-10-01</span>
-                </div>
-                <div class="comment-rating">⭐⭐⭐⭐⭐</div>
-                <p class="comment-text">Excelente rampa, muito acessível!</p>
-              </div>
-              <div class="comment-card">
-                <div class="comment-header">
-                  <span class="user-name">Maria Oliveira</span>
-                  <span class="comment-date">2023-10-02</span>
-                </div>
-                <div class="comment-rating">⭐⭐⭐⭐</div>
-                <p class="comment-text">Boa estrutura, mas poderia ser melhor sinalizada.</p>
-              </div>
-              <div class="comment-card">
-                <div class="comment-header">
-                  <span class="user-name">Carlos Santos</span>
-                  <span class="comment-date">2023-10-03</span>
-                </div>
-                <div class="comment-rating">⭐⭐⭐⭐⭐</div>
-                <p class="comment-text">Muito útil para pessoas com mobilidade reduzida.</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="tab-pane" id="description-content">
-            <h3>Descrição do Local</h3>
-            <p id="location-description"></p>
-          </div>
-        </div>
-
-        <!-- Botões de Ação -->
-        <div class="action-buttons">
-          <button class="comment-btn">Adicionar Comentário</button>
-        </div>
-      </section>
+  <div id="btnModal" class="modal-small">
+    <div class="modal-content-small">
+      <h4>Legenda dos Pins</h4>
+      <ul id="pinsLegendList">
+        <!-- JS vai preencher -->
+      </ul>
     </div>
   </div>
-</div>
 
-<!-- Modal para Adicionar Comentário -->
-<div id="addCommentModal" class="modal">
-  <div class="modal-content">
+  <button id="btnLegenda" class="btn legenda">Legenda</button>
+
+  <div id="infoModal" class="modal">
+    <div class="modal-content">
+      <div id="modal-body">
+        <!-- Carrossel de Imagens -->
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="project-img">
+                <img src="/src/assets/img/map/section-map/foto-local.jpeg" alt="Foto 01">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="project-img">
+                <img src="/src/assets/img/map/section-map/foto-local-2.jpeg" alt="Foto 02">
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="project-img">
+                <img src="/src/assets/img/map/section-map/foto-local-3.jpeg" alt="Foto 03">
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+
+        <!-- Informações -->
+        <section class="info-section">
+          <h1 id="location-title"></h1>
+          <div class="rating">
+            <span>Nota: </span>
+            <div class="stars">⭐⭐⭐⭐⭐</div>
+          </div>
+
+          <!-- Abas: Informações, Avaliações, Descrição -->
+          <div class="tabs">
+            <button class="tab-btn active" id="info-tab">Informações</button>
+            <button class="tab-btn" id="review-tab">Comentários</button>
+            <button class="tab-btn" id="description-tab">Descrição</button>
+          </div>
+
+          <!-- Conteúdo das Abas -->
+          <div class="tab-content">
+            <div class="tab-pane active" id="info-content">
+              <h3>Informações de Acessibilidade</h3>
+              <ul>
+                <li></li>
+                <li></li>
+              </ul>
+            </div>
+
+            <div class="tab-pane" id="review-content">
+              <h3>Comentários</h3>
+              <div class="comments-list">
+                <div class="comment-card">
+                  <div class="comment-header">
+                    <span class="user-name">João Silva</span>
+                    <span class="comment-date">2023-10-01</span>
+                  </div>
+                  <div class="comment-rating">⭐⭐⭐⭐⭐</div>
+                  <p class="comment-text">Excelente rampa, muito acessível!</p>
+                </div>
+                <div class="comment-card">
+                  <div class="comment-header">
+                    <span class="user-name">Maria Oliveira</span>
+                    <span class="comment-date">2023-10-02</span>
+                  </div>
+                  <div class="comment-rating">⭐⭐⭐⭐</div>
+                  <p class="comment-text">Boa estrutura, mas poderia ser melhor sinalizada.</p>
+                </div>
+                <div class="comment-card">
+                  <div class="comment-header">
+                    <span class="user-name">Carlos Santos</span>
+                    <span class="comment-date">2023-10-03</span>
+                  </div>
+                  <div class="comment-rating">⭐⭐⭐⭐⭐</div>
+                  <p class="comment-text">Muito útil para pessoas com mobilidade reduzida.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="tab-pane" id="description-content">
+              <h3>Descrição do Local</h3>
+              <p id="location-description"></p>
+            </div>
+          </div>
+
+          <!-- Botões de Ação -->
+          <div class="action-buttons">
+            <button class="comment-btn">Adicionar Comentário</button>
+          </div>
+        </section>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal para Adicionar Comentário -->
+  <div id="addCommentModal" class="modal">
     <div id="add-comment-body">
       <h2>Adicionar Comentário</h2>
       <form id="comment-form">
@@ -160,39 +169,43 @@
           <input type="file" id="comment-image" multiple style="display:none">
           <ul id="file-list"></ul>
         </div>
-        <button type="submit" class="submit-btn">Enviar</button>
+        <div style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 10px;">
+          <button type="button" class="submit-btn back-btn"
+            style="background-color: #ccc; color: #333;">Cancelar</button>
+          <button type="submit" class="submit-btn">Enviar</button>
+        </div>
       </form>
     </div>
   </div>
-</div>
 
-<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-<script src="api_map.js"></script>
-<script src="map.js"></script>
-<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-<script>
-  // Test function for getLocations
-  window.testGetLocations = async function (skip = 0, limit = 10) {
-    console.log(`Testing getLocations with skip=${skip}, limit=${limit}`);
-    const result = await getLocations(skip, limit);
-    console.log('Result:', result);
-    return result;
-  };
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="api_map.js"></script>
+  <script src="map.js"></script>
+  <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
+  <script>
+    // Test function for getLocations
+    window.testGetLocations = async function (skip = 0, limit = 10) {
+      console.log(`Testing getLocations with skip=${skip}, limit=${limit}`);
+      const result = await getLocations(skip, limit);
+      console.log('Result:', result);
+      return result;
+    };
 
 
-  // Function to log all accessibility items
-  window.logAllPins = async function () {
-    const items = await getAccessibilityItems();
-    console.log('Accessibility Items:', items);
-  };
+    // Function to log all accessibility items
+    window.logAllPins = async function () {
+      const items = await getAccessibilityItems();
+      console.log('Accessibility Items:', items);
+    };
 
-  // Test function for getAccessibilityItems
-  window.testGetAccessibilityItems = async function () {
-    console.log('Testing getAccessibilityItems');
-    const result = await getAccessibilityItems();
-    console.log('Result:', result);
-    return result;
-  };
-</script>
+    // Test function for getAccessibilityItems
+    window.testGetAccessibilityItems = async function () {
+      console.log('Testing getAccessibilityItems');
+      const result = await getAccessibilityItems();
+      console.log('Result:', result);
+      return result;
+    };
+  </script>
 </body>
+
 </html>
