--- a/src/pages/interactive-map/index.html
+++ b/src/pages/interactive-map/index.html
@@ -181,7 +181,13 @@
     </div>
   </div>
 
-  <div id="successModal" class="modal-overlay" style="display: none;">
+  <div id="loadingModal" class="modal-overlay" style="display: none;">
+      <div class="loader-content">
+          <div class="spinner"></div> 
+      </div>
+  </div>
+
+    <div id="successModal" class="modal-overlay" style="display: none;">
     <div class="modal-content success-box">
       <div class="success-icon">✅</div>
       <h3>Obrigado!</h3>
