fix(auth): update back button to circular icon
Restyle the back button in the forgot password modal to a circular, absolutely positioned icon using "<" instead of text, improving the UI design and consistency.

--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -53,7 +53,6 @@
   <div id="forgotPasswordModal" class="forgot-modal" style="display:none;">
     <section class="login-container">
       <div class="login-card" id="forgot-card">
-        <span id="close-forgot-modal" class="close-btn">&times;</span>
         <h2>Recuperar Senha</h2>
 
         <form id="forgot-password-form">
@@ -70,7 +69,7 @@
           Instruções enviadas para o email!
         </p>
 
-        <button id="back-to-login" class="back-btn" type="button">Voltar ao Login</button>
+        <button id="back-to-login" class="back-btn" type="button"><</button>
       </div>
 
       <div class="login-card" id="success-card" style="display:none;">
