--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Comme:wght@100..900&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles/global.css" />
-  <link rel="stylesheet" href="styles/index.css" />
+  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
 </head>
 
 <body>
@@ -25,8 +25,7 @@
           Eunápolis. Juntos podemos construir um ambiente mais inclusivo.
         </p>
       </div>
-      <a href="pages/interactive-map/index.html" class="explorar-mapa-btn"
-        aria-label="Explorar o mapa de acessibilidade">
+      <a href="/mapa/" class="explorar-mapa-btn" aria-label="Explorar o mapa de acessibilidade">
         Explorar mapa
       </a>
     </section>
@@ -41,15 +40,7 @@
     </section>
   </main>
 
-  <script src="pages/interactive-map/api_map.js"></script>
-  <script src="scripts/global.js"></script>
-  <script src="scripts/index.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      loadComponent("header", "body-start");
-      loadComponent("footer", "body-end");
-    });
-  </script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
