fix: update stylesheet paths and improve HTML structure in admin and auth pages

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100..900&family=Comme:wght@100..900&display=swap"
         rel="stylesheet" />
 
-    <link rel="stylesheet" href="/admin/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 
@@ -20,7 +20,7 @@
 
     <header>
         <div class="header-left">
-            <img src="/assets/img/global/logo-acesso-livre.png">
+            <img src="../assets/img/global/logo-acesso-livre.png">
             <span>Acesso Livre</span>
         </div>
 
