feat: Replace old PNG logos with new SVG assets and update HTML references.

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <div class="header-left">
-            <img src="../assets/img/global/logo-acesso-livre.png">
+            <img src="../assets/img/global/acesso-livre-logo.svg">
             <span>Acesso Livre</span>
         </div>
 
