--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,8 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100..900&family=Comme:wght@100..900&display=swap"
-    rel="stylesheet"
-  />
+    rel="stylesheet" />
 
   <link rel="stylesheet" href="./style.css" />
 </head>
@@ -18,7 +18,7 @@
 <body>
   <section class="login-container">
     <div class="login-card">
-      <img src="/assets/img/global/logo-acesso-livre.png" alt="Logo Acesso Livre" class="logo">
+      <img src="/assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre" class="logo">
       <h1>LOGIN</h1>
 
       <form id="login-form" class="login-form">
@@ -84,4 +84,5 @@
 
   <script type="module" src="./main.js"></script>
 </body>
+
 </html>
