fix(ui): update logo paths and styling in admin, auth, and header
- Add alt text to logo in admin page
- Correct logo src path and remove class in auth page
- Adjust logo size and display in auth styles
- Update logo src to PNG in header component

--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <div class="header-left">
-            <img src="../assets/img/global/acesso-livre-logo.svg">
+            <img src="../assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre">
             <span>Acesso Livre</span>
         </div>
 
