--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -18,7 +18,7 @@
 <body>
   <section class="login-container">
     <div class="login-card">
-      <img src="/assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre" class="logo">
+    <img src="../assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre">
       <h1>LOGIN</h1>
 
       <form id="login-form" class="login-form">
