feat(auth): implement forgot password functionality with API and UI
Add a new `forgotPassword` method to the auth API with robust error handling,
including a helper function for extracting detailed error messages from API responses.
Refactor the forgot password modal in the UI to include form submission, email validation,
and display of success/error messages. Update the HTML to include necessary script imports
and add a class to the logo for styling consistency.

porem ao enviar o email para a recuperação de senha ele da: Erro 404: Falha na solicitação.

--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -18,7 +18,7 @@
 <body>
   <section class="login-container">
     <div class="login-card">
-    <img src="../assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre">
+    <img src="../assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre" class="logo">
       <h1>LOGIN</h1>
 
       <form id="login-form" class="login-form">
@@ -83,6 +83,8 @@
   </div>
 
   <script type="module" src="./main.js"></script>
+  <script type="module" src="./api.js"></script>
+  <script type="module" src="./forgot-password.js"></script>
 </body>
 
 </html>
