--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Comme:wght@100..900&display=swap"
     rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="./styles/global.css" />
+  <link rel="stylesheet" href="styles/global.css" />
   <link rel="stylesheet" href="./styles/index.css" />
 </head>
 
@@ -25,7 +25,7 @@
           Eunápolis. Juntos podemos construir um ambiente mais inclusivo.
         </p>
       </div>
-      <a href="/mapa/" class="explorar-mapa-btn" aria-label="Explorar o mapa de acessibilidade">
+      <a href="pages/mapa/" class="explorar-mapa-btn" aria-label="Explorar o mapa de acessibilidade">
         Explorar mapa
       </a>
     </section>
