refactor(admin, auth): restructure admin and auth pages, update script paths, and remove unused files

--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -20,7 +20,7 @@
 
     <header>
         <div class="header-left">
-            <img src="../assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre">
+            <img src="/assets/img/global/acesso-livre-logo.svg" alt="Logo Acesso Livre">
             <span>Acesso Livre</span>
         </div>
 
@@ -57,7 +57,8 @@
     </main>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./script.js"></script>
+    <script type="module" src="./api.js"></script>
 </body>
 
 </html>
