--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -82,7 +82,7 @@
     </section>
   </div>
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./script.js"></script>
   <script type="module" src="./api.js"></script>
   <script type="module" src="./forgot-password.js"></script>
 </body>
