--- a/src/pages/mapa/index.html
+++ b/src/pages/mapa/index.html
@@ -47,6 +47,12 @@
 
     <div id="infoModal" class="modal">
         <div class="modal-content">
+            <button id="closeInfoModal" class="close-info-btn">
+                <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M19 12H5M12 19l-7-7 7-7" />
+                </svg>
+            </button>
             <div id="modal-body">
                 <!-- Carrossel de Imagens -->
                 <div class="swiper">
