--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -12,6 +12,12 @@
     href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100..900&family=Comme:wght@100..900&display=swap"
     rel="stylesheet" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -23,13 +29,13 @@
 
       <form id="login-form" class="login-form">
         <div class="input-group">
-          <input type="email" id="admin-email" required />
-          <label for="admin-email">Email</label>
+          <input type="email" id="admin-email" required placeholder="Email" />
         </div>
-
         <div class="input-group">
-          <input type="password" id="admin-password" required />
-          <label for="admin-password">Senha</label>
+          <input type="password" id="admin-password" required placeholder="Senha" />
+          <span class="toggle-password material-icons" onclick="togglePassword('admin-password', this)">
+            visibility
+          </span>
         </div>
 
         <button type="submit" class="login-btn">Entrar</button>
