--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -62,8 +62,7 @@
 
         <form id="forgot-password-form">
           <div class="input-group">
-            <input type="email" id="forgot-email" required />
-            <label for="forgot-email">Email</label>
+            <input type="email" id="forgot-email" required placeholder="Email" />
           </div>
 
           <button class="send-btn">Enviar</button>
