--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@100..900&family=Comme:wght@100..900&display=swap"
         rel="stylesheet" />
 
+    <link rel="stylesheet" href="../../styles/global.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
