--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -18,6 +18,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <link rel="stylesheet" href="../../styles/global.css" />
   <link rel="stylesheet" href="./style.css" />
 </head>
 
