--- a/src/pages/mapa/index.html
+++ b/src/pages/mapa/index.html
@@ -11,7 +11,7 @@
         href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&family=Comme:wght@100..900&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comme:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/styles/global.css">
+    <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
