--- a/src/pages/admin/index.html
+++ b/src/pages/admin/index.html
@@ -31,6 +31,20 @@
     </header>
 
     <main>
+
+        <button id="menu-btn" class="menu-btn">
+            <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">  
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+            </svg>
+        </button>
+
+        <div id="side-modal">
+            <button id="close-modal" style="float: right; background: none; border: none; font-size: 20px; cursor: pointer;">✖</button>
+            <h2>Menu</h2>
+            <a href="#">Comentários</a>
+            <a href="#">Editar Local</a>
+        </div>
+
         <div id="reviews-list">
             <!-- Comentários serão adicionados pelo JS -->
         </div>
