refactor(ui): reposition back button in auth modal and adjust admin menu position

--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -59,6 +59,7 @@
   <div id="forgotPasswordModal" class="forgot-modal" style="display:none;">
     <section class="login-container">
       <div class="login-card" id="forgot-card">
+        <button id="back-to-login" class="close-info-btn" type="button">&lt;</button>
         <h2>Recuperar Senha</h2>
 
         <form id="forgot-password-form">
@@ -73,8 +74,6 @@
         <p id="forgot-success" class="success-message" style="display:none;">
           Instruções enviadas para o email!
         </p>
-
-        <button id="back-to-login" class="back-btn" type="button">&lt;</button>
       </div>
 
       <div class="login-card" id="success-card" style="display:none;">
