refactor(ui): remove description tab and replace alerts with modal
Remove the description tab from the map page UI as requested, update JavaScript to handle the absence of the description element, and introduce a custom modal function to replace browser alerts for better user experience in comment submissions.

--- a/src/pages/mapa/index.html
+++ b/src/pages/mapa/index.html
@@ -81,7 +81,6 @@
                     <div class="tabs">
                         <button class="tab-btn active" id="info-tab">Informações</button>
                         <button class="tab-btn" id="review-tab">Comentários</button>
-                        <button class="tab-btn" id="description-tab">Descrição</button>
                     </div>
 
                     <!-- Conteúdo das Abas -->
@@ -124,10 +123,7 @@
                             </div>
                         </div>
 
-                        <div class="tab-pane" id="description-content">
-                            <h3>Descrição do Local</h3>
-                            <p id="location-description"></p>
-                        </div>
+                        <!-- Descrição removida conforme solicitado -->
                     </div>
 
                     <!-- Botões de Ação -->
